...
            "state" : "translated",
            "value" : "停止並清除畫面"
          }
        }
      }
    },
    "停止扫描" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Stop scanning"
          }
...
            "state" : "translated",
            "value" : "它可能已被刪除，或目前的面板已更換。"
          }
        }
      }
    },
    "完成" : {
      "comment" : "finish face selection",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
...
            "state" : "translated",
            "value" : "即時影像預覽佔位"
          }
        }
      }
    },
    "实时预览" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Live Preview"
          }
...
            "state" : "translated",
            "value" : "微調"
          }
        }
      }
    },
    "忘记" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Forget"
          }
...
            "state" : "translated",
            "value" : "掃描網路"
          }
        }
      }
    },
    "扫描附近的璃奈板" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Scan for nearby boards"
          }
...
            "state" : "translated",
            "value" : "接收韌體記錄"
          }
        }
      }
    },
    "控制对象" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Target"
          }
...
            "state" : "translated",
            "value" : "更多"
          }
        }
      }
    },
    "更多操作" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "More Actions"
          }
...
            "state" : "translated",
            "value" : "附近的藍牙璃奈板"
          }
        }
      }
    },
    "随机" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Random"
          }
...
            "state" : "translated",
            "value" : "已連接其他面板，請重新選擇表情。"
          }
        }
      }
    },
    "面板控制" : {
      "comment" : "board control center title",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Board Control"
...
